la ra la ra sanata va

--- a/index.html
+++ b/index.html
@@ -38,24 +38,21 @@
     <!-- Algunas etiquetas para usar son -->
     <!-- Etiqueta de encabezado -->
         <!-- <h1>Puede ir desde h1 hasta h6</h1> -->
-<<<<<<< HEAD
 
     <!-- Etiqueta de texto -->
         <!-- <p>Esta es la sintaxis para escribir un parrafo</p> -->
 
-=======
     <h1>es una prueba y solo eso</h1>
     <!-- Etiqueta de texto -->
         <!-- <p>Esta es la sintaxis para escribir un parrafo</p> -->
        <p>algo es algo</p>
->>>>>>> e3df34fef2a23bd42f331c12967b91bf9b649294
     <!-- Etiqueta de imagen -->
         <!-- <img src="aquí debes colocar la ruta hacia la imagen" alt="aquí una descripción breve de la imagen"> -->
 
     <!-- DEBAJO DE ESTE COMENTARIO DEBERIAS AGREGAR ALGUNA DE LAS ETIQUETAS HTML -->
-
-
-
+    <h1>y otra vez ponemos algo que no sabemos que escribir</h1
+        <p>tenemos algo que poner en el parrafo</p>
+        <img src="https://img.freepik.com/fotos-premium/gato-loco-pais-maravillas-ai-generativo_791316-7690.jpg?w=740" alt="aquí una descripción breve de la imagen">
 
     
 </body>
