Agregue un archivo HTML

--- a/index.html
+++ b/index.html
@@ -38,22 +38,21 @@
     <!-- Algunas etiquetas para usar son -->
     <!-- Etiqueta de encabezado -->
         <!-- <h1>Puede ir desde h1 hasta h6</h1> -->
-<<<<<<< HEAD
 
     <!-- Etiqueta de texto -->
         <!-- <p>Esta es la sintaxis para escribir un parrafo</p> -->
 
-=======
-    <h1>es una prueba y solo eso</h1>
     <!-- Etiqueta de texto -->
         <!-- <p>Esta es la sintaxis para escribir un parrafo</p> -->
-       <p>algo es algo</p>
->>>>>>> e3df34fef2a23bd42f331c12967b91bf9b649294
+       
     <!-- Etiqueta de imagen -->
         <!-- <img src="aquí debes colocar la ruta hacia la imagen" alt="aquí una descripción breve de la imagen"> -->
 
     <!-- DEBAJO DE ESTE COMENTARIO DEBERIAS AGREGAR ALGUNA DE LAS ETIQUETAS HTML -->
-
+    <h1>Esto es de HTML</h1>
+    <p>Aca escribi algo en esta etiqueta de parrafo</p>
+    <img src="https://tse3.mm.bing.net/th?id=OIP.wp3SDEg9afnK_NuIlMF6ZQHaLJ&pid=Api&P=0&h=180 " alt="Un Bullterrier">
+    
 
 
 
